[gd_scene load_steps=3 format=3 uid="uid://dqn1fthxlr67x"]

[ext_resource type="Script" uid="uid://d0vcn61fdv2fv" path="res://src/ui/ingame/level/level_select_ui.gd" id="1_4stsy"]
[ext_resource type="PackedScene" uid="uid://lgd2g38edtud" path="res://src/ui/component/border_panel_container.tscn" id="2_nt61w"]

[node name="LevelSelectUi" type="CanvasLayer"]
script = ExtResource("1_4stsy")

[node name="BorderPanelContainer" parent="." instance=ExtResource("2_nt61w")]

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "level_select"
horizontal_alignment = 1

[node name="LevelFlowContainer" type="HFlowContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
alignment = 1

[node name="BackBtn" type="Button" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "back"

[editable path="BorderPanelContainer"]
